# AvilaInc

./: .env.example  Admin.slnx  CNAME  DEPLOY-STATUS.md  Dockerfile.backend  Dockerfile.frontend  GITHUB_INTEGRATION.md  HOMOGENIZATION_SUMMARY.md  INTEGRATION_DOCUMENTATION.md  INTEGRATION_README.md  Lighthouse.json  Manager.sln  README-ADMIN.md  README.md  deploy-github-pages.bat  deploy-github-pages.ps1  deploy-simple.bat  docker-compose.prod.yml  docker-compose.yml  github.html  index.html  index1.html  package-admin.json  package-lock.json  package.json  render.yaml  setup.sh  site.webmanifest  tsconfig.json
AI/: index.html
api/: .env.example  GRAVATAR_API_v0.md  gravatar.js  package.json  server.js
automation-integration/: .env.example  .eslintrc.json  INTEGRATION.md  README.md  deploy.ps1  deploy.sh  nodemon.json  package-lock.json  package.json  tsconfig.json
automation-integration/backend-rs/: .gitignore  Cargo.toml  README.md  test-endpoints.ps1
automation-integration/backend-rs/src/: github.rs  main.rs
backend/: .env.example  package.json  tsconfig.json
deprecated/: server.test.js  server.ts  test.json
docs/: ANALYTICS-SYSTEM.md  CLOUDFLARE_SETUP.md  CLOUDFLARE_TOKEN.md  CONFIGURATION.md  DOMAIN_SETUP.md  ESTRUTURA_PROJETO.md  FASE-1-COMPLETA.md  FASE-2-COMPLETA.md  GMAIL-INTEGRATION.md  GROK_VIDEO_INTEGRATION.md  LANDING-API-INTEGRATION.md  MANAGER_README.md  MIGRACAO_GITHUB_PAGES.md  MIGRATION-PLAN.md  OPENAI-INTEGRATION.md  OPENAI_STATUS.md  PROMPT-LANDING-PAGE.md  QUICKSTART_VIDEO.md  README.md  STRIPE-INTEGRATION.md  WEBSITE-GENERATOR.md  (+1 more)
(+328 files in other folders)
