[package]
name = "automation-integration"
version = "1.0.0"
edition = "2021"
authors = ["Avila Inc"]

[dependencies]
# Apenas serialização JSON - zero runtime dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
